--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "4.0.3",
+    "vanta": "^0.5.22",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
